# rust-quant-service

./: Cargo.toml  README.md
src/: app.rs  main.rs  state.rs
src/api/: auth.rs  mod.rs  ws.rs
src/config/: mod.rs  settings.rs
src/core/strategy/: mod.rs
src/exchange/: traits.rs
src/models/: mod.rs  order.rs  user.rs
src/services/: auth_service.rs  mod.rs  ws_service.rs
src/utils/: error.rs  response.rs
