[package]
name = "rust-quant-service"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["ws", "macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"]}
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"]}
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["serde"] }
